changed images layout

--- a/Design Portfolio/index.html
+++ b/Design Portfolio/index.html
@@ -69,7 +69,7 @@
 				<div id="fh5co-aside-inner">
 					<div class="row" id="fh5co-bio">
 						<div class="col-md-12">
-							<h2>About Me</h2>
+							<h2>@Karticks.Studio</h2>
 						</div>
 						<div class="col-md-6">
 							<p>Sint, <a href="#">consectetur</a>, fugit. Sed, blanditiis. Autem quae perferendis totam provident, consequuntur inventore reiciendis vitae suscipit rerum repellendus facere voluptatem tenetur iure praesentium corrupti asperiores eos laborum debitis eaque maiores magnam nisi exercitationem sunt maxime! At eligendi deserunt, iusto natus molestias!</p>
@@ -81,7 +81,7 @@
 							<a href="#"><i class="icon-envelope"></i></a>
 							<a href="#"><i class="icon-twitter"></i></a>
 							<a href="#"><i class="icon-linkedin"></i></a>
-							<a href="#"><i class="icon-instagram"></i></a>
+							<a href="https://www.instagram.com/karticks.studio"><i class="icon-instagram"></i></a>
 							<a href="#"><i class="icon-google-plus"></i></a>
 						</div>
 <div class="col-md-12" style="margin-top: 40px;">
@@ -106,8 +106,8 @@
 					<div class="text-wrap">
 						<div class="text-inner">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>Belief</h2>
+								<span>16 photos</span>
 							</div>
 						</div>
 					</div>
@@ -327,66 +327,6 @@
 		  		<a href="#">
 					<div class="img-wrap">
 						<img src="images/img_16.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="text-wrap">
-						<div class="text-inner">
-							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
-							</div>
-						</div>
-					</div>
-				</a>
-		  </div>
-		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
-					<div class="img-wrap">
-						<img src="images/img_17.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="text-wrap">
-						<div class="text-inner">
-							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
-							</div>
-						</div>
-					</div>
-				</a>
-		  </div>
-		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
-					<div class="img-wrap">
-						<img src="images/img_18.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="text-wrap">
-						<div class="text-inner">
-							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
-							</div>
-						</div>
-					</div>
-				</a>
-		  </div>
-		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
-					<div class="img-wrap">
-						<img src="images/img_19.jpg" alt="" class="img-responsive">
-					</div>
-					<div class="text-wrap">
-						<div class="text-inner">
-							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
-							</div>
-						</div>
-					</div>
-				</a>
-		  </div>
-		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
-					<div class="img-wrap">
-						<img src="images/img_20.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
 						<div class="text-inner">
