--- a/Design Portfolio/single.html
+++ b/Design Portfolio/single.html
@@ -1,29 +1,15 @@
 <!DOCTYPE HTML>
-<!--
-	Aesthetic by gettemplates.co
-	Twitter: http://twitter.com/gettemplateco
-	URL: http://gettemplates.co
--->
+
 <html>
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Photo &mdash; Free Website Template, Free HTML5 Template by gettemplates.co</title>
+	<title>&mdash; Karticks.Studio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by gettemplates.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
-	<meta name="author" content="gettemplates.co" />
+	<meta name="description" content="Design Portfolio" />
+	<meta name="keywords" content="design, portfolio, art, gallery, portraits, inclusive, studio " />
+	<meta name="author" content="Kartik Kamepalli" />
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
@@ -38,9 +24,9 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
+
 	<!-- Magnific Popup -->
 	<link rel="stylesheet" href="css/magnific-popup.css">
-	
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -59,8 +45,6 @@
 		<a href="#"><span></span><em>About</em></a>
 	</div>
 
-	
-
 	<div id="fh5co-aside">
 		<div class="image-bg"></div>
 		<div class="overlay"></div> 
@@ -69,23 +53,23 @@
 				<div id="fh5co-aside-inner">
 					<div class="row" id="fh5co-bio">
 						<div class="col-md-12">
-							<h2>@Karticks.Studio</h2>
+							<h2>Karticks.Studio</h2>
+						</div>
+						
+						<div class="col-md-6">
+							<p>Purely driven by emotion, my artwork is not intended to convey any messages or stories. With my sketches, I intend to create an atmosphere and to convey the feelings and emotions to the viewer that I felt at the time of making them.</p>
 						</div>
 						<div class="col-md-6">
-							<p>Sint, <a href="#">consectetur</a>, fugit. Sed, blanditiis. Autem quae perferendis totam provident, consequuntur inventore reiciendis vitae suscipit rerum repellendus facere voluptatem tenetur iure praesentium corrupti asperiores eos laborum debitis eaque maiores magnam nisi exercitationem sunt maxime! At eligendi deserunt, iusto natus molestias!</p>
-						</div>
-						<div class="col-md-6">
-							<p>Quas praesentium dolore unde delectus, nemo accusantium, qui ab illum debitis assumenda tempore molestias ipsam, eveniet repellendus officiis in vel, explicabo quos necessitatibus atque doloremque. Quae maiores delectus, magnam nam.</p>
+							<p>My life experiences, my passions, interactions, interests, reflection, all manifest in my artwork and change over time. My work has always been about reflecting my inner self and how I feel being in that space, my personal response; reevaluating and revoking memories is what inspires me.</p>
 						</div>
 						<div class="col-md-12 fh5co-social">
-							<a href="#"><i class="icon-envelope"></i></a>
-							<a href="#"><i class="icon-twitter"></i></a>
-							<a href="#"><i class="icon-linkedin"></i></a>
-							<a href="https://www.instagram.com/karticks.studio"><i class="icon-instagram"></i></a>
-							<a href="#"><i class="icon-google-plus"></i></a>
+
+							<a href="https://www.linkedin.com/in/kartik-kamepalli-2309ab158/" target="_blank"><i class="icon-linkedin"></i></a>
+							<a href="https://www.instagram.com/karticks.studio" target="_blank"><i class="icon-instagram"></i></a>
+							
 						</div>
 <div class="col-md-12" style="margin-top: 40px;">
-	<p>&copy; 2016 Free HTML5 Template. All Rights Reserved. Designed by <a href="http://gettemplates.co/">GetTemplates.co</a> Demo Images: <a href="http://unsplash.com/" target="_blank">Unsplash</a></p>
+	<p>&copy; All Rights Reserved. Designed by <a href="https://www.instagram.com/karthikspeaks_/" target="_blank">Kartik Kamepalli</a></p>
 </div>
 					</div>
 				</div>
@@ -99,240 +83,225 @@
 		  <div class="grid-sizer"></div>
 
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		  		<a href="single.html">
+		  		<a href="images/img_1.jpg" class="image-popup" title="god's eye">
 					<div class="img-wrap">
 						<img src="images/img_1.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Belief</h2>
-								<span>16 photos</span>
+								<h2>god's eye</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_2.jpg" class="image-popup" title="pointing their fingers of blame">
 					<div class="img-wrap">
 						<img src="images/img_2.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>pointing their fingers of blame</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_3.jpg" class="image-popup" title="define beauty">
 					<div class="img-wrap">
 						<img src="images/img_3.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>define beauty</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_4.jpg" class="image-popup" title="darkness within my soul">
 					<div class="img-wrap">
 						<img src="images/img_4.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>darkness within my soul</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_5.jpg" class="image-popup" title="we've got rhythm">
 					<div class="img-wrap">
 						<img src="images/img_5.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>we've got rhythm</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_6.jpg" class="image-popup" title="light that I can't find">
 					<div class="img-wrap">
 						<img src="images/img_6.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>light that I can't find</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_7.jpg" class="image-popup" title="those simple things in life">
 					<div class="img-wrap">
 						<img src="images/img_7.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>those simple things in life</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_8.jpg" class="image-popup" title="not all wounds are superficial">
 					<div class="img-wrap">
 						<img src="images/img_8.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>not all wounds are superficial</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_9.jpg" class="image-popup" title="young man's heart">
 					<div class="img-wrap">
 						<img src="images/img_9.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>young man's heart</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_10.jpg" class="image-popup" title="growing up was never easy">
 					<div class="img-wrap">
 						<img src="images/img_10.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>growing up was never easy</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_11.jpg" class="image-popup" title="pulling the trigger">
 					<div class="img-wrap">
 						<img src="images/img_11.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>pulling the trigger</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_12.jpg" class="image-popup" title="losing his faith">
 					<div class="img-wrap">
 						<img src="images/img_12.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>losing his faith</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_13.jpg" class="image-popup" title="whispers in the dark">
 					<div class="img-wrap">
 						<img src="images/img_13.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>whispers in the dark</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_14.jpg" class="image-popup" title="traped in wonderland">
 					<div class="img-wrap">
 						<img src="images/img_14.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>traped in wonderland</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		    <a href="single.html">
+		    <a href="images/img_15.jpg" class="image-popup" title="lies of the beautiful people">
 					<div class="img-wrap">
 						<img src="images/img_15.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>lies of the beautiful people</h2>
 							</div>
 						</div>
 					</div>
 				</a>
 		  </div>
+
 		  <div class="grid-item item animate-box" data-animate-effect="fadeIn">
-		  		<a href="#">
+		  		<a href="images/img_16.jpg" class="image-popup" title="hole in my heart">
 					<div class="img-wrap">
 						<img src="images/img_16.jpg" alt="" class="img-responsive">
 					</div>
 					<div class="text-wrap">
-						<div class="text-inner">
+						<div class="text-inner popup">
 							<div>
-								<h2>Name of photo or title here</h2>
-								<span>72 photos</span>
+								<h2>hole in my heart</h2>
 							</div>
 						</div>
 					</div>
@@ -340,7 +309,6 @@
 		  </div>
 
 		</div>
-
 		
 	</div>
 
